tests/expectations/parser/program/illegal_import_fail.out
Error [EPAR0370047]: expected `import`, `program`, or module item at top level
    --> test:1:1
     |
   1 | stub credits.aleo {
     | ^^^^
Error [EPAR0370005]: expected '}', '@', 'record', 'struct', 'fn', 'final', 'const', 'mapping', 'storage', 'script', 'interface' -- found 'import'
    --> test:6:5
     |
   6 |     import hello.aleo;
     |     ^^^^^^
